--- a/research.Rmd
+++ b/research.Rmd
@@ -12,11 +12,11 @@ p {
 
 **June Choe**, Masaya Yoshida, and Jennifer Cole. (2022). [The role of prosodic focus in the reanalysis of garden path sentences: Depth of semantic processing impedes the revision of an erroneous local analysis](https://escholarship.org/uc/item/5d84n2x7). _Glossa Psycholinguistics 1_(1). DOI: 10.5070/G601136
 
-**June Choe**, Yiran Chen, May Pik Yu Chan, Aini Li, Xin Gao, and Nicole Holliday. (2022). *Language-specific Effects on Automatic Speech Recognition Errors in American English*. Proceedings of the 28th International Conference on Computational Linguistics.
+**June Choe**, Yiran Chen, May Pik Yu Chan, Aini Li, Xin Gao, and Nicole Holliday. (2022). [Language-specific Effects on Automatic Speech Recognition Errors for World Englishes](static/papers/Choe et_al 2022 COLING.pdf). _Proceedings of the 28th International Conference on Computational Linguistics_.
 
-May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao, and Nicole Holliday. (2022). [Training and typological bias in ASR performance for world Englishes](https://www.dropbox.com/s/q76b1v8dx5ipx9s/chan%20et%20al_Interspeeech2022_ASR.pdf?dl=0). Proceedings of the 23rd Conference of the International Speech Communication Association.
+May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao, and Nicole Holliday. (2022). [Training and typological bias in ASR performance for world Englishes](static/papers/Chan et_al 2022 INTERSPEECH.pdf). _Proceedings of the 23rd Conference of the International Speech Communication Association_.
 
-**June Choe**, and Anna Papafragou. (2022). [The acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings](https://escholarship.org/uc/item/2m87n4ht). *Proceedings of the Annual Meeting of the Cognitive Science Society*, 44, 2745-2752.
+**June Choe**, and Anna Papafragou. (2022). [The acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings](https://escholarship.org/uc/item/2m87n4ht). _Proceedings of the Annual Meeting of the Cognitive Science Society_, 44, 2745-2752.
 
 Sean McWeeny, Jinnie S. Choi, **June Choe**, Alexander LaTourette, Megan Y. Roberts, and Elizabeth S. Norton. (2022). [Rapid automatized naming (RAN) as a kindergarten predictor of future reading in English: A systematic review and meta-analysis](https://doi.org/10.1002/rrq.467). _Reading Research Quarterly_. DOI: 10.1002/rrq.467
 
@@ -50,7 +50,7 @@ May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao and Nicole Holliday
 
 D’Onofrio, Annette, **June Choe** and Masaya Yoshida. *Personae in syntactic processing: Socially-specific agents bias expectations of verb transitivity*. Poster at The 93rd Annual Meeting of the Linguistics Society of America. 3-6 January 2019. New York City, NY.
 
-## Other research activities
+## Other conference activities
 
 ### Workshops led
 
@@ -60,7 +60,7 @@ _An introduction to SnowGlobe, a tool for systematic reviews_ with Dr. Sean McWe
 
 _Experimental syntax using IBEX: a walkthrough_ with Dr. Nayoun Kim. 2021 BK Winter School-Workshop on Experimental Linguistics/Syntax at Sungkyunkwan University, 19-22 January 2021. Seoul, South Korea. [PDF](https://github.com/yjunechoe/IBEX-Workshop-Materials/blob/master/2021-ibex-workshop-slides.pdf)
 
-### R programming
+### R conferences
 
 June Choe. [Cracking open ggplot internals with {ggtrace}](https://www.rstudio.com/conference/2022/talks/cracking-open-ggplot-internals-ggtrace/). Talk at the 2022 RStudio Conference, 25-28 July 2022. Washington D.C. [https://github.com/yjunechoe/ggtrace-rstudioconf2022](https://github.com/yjunechoe/ggtrace-rstudioconf2022)
 
