--- a/index.Rmd
+++ b/index.Rmd
@@ -104,9 +104,9 @@ d-title p {
 
 I am a third year PhD student in [Linguistics at the University of Pennsylvania](https://live-sas-www-ling.pantheon.sas.upenn.edu/), and a student affiliate of [Penn MindCORE](https://mindcore.sas.upenn.edu/) and the [Language and Communication Sciences](https://web.sas.upenn.edu/lcs/) program. I am a psycholinguist broadly interested in experimental approaches to studying meaning, of various flavors. I use computational and behavioral methods to study how comprehenders process ambiguity in structure and meaning, both in real time and at different stages of language development. My advisor is Anna Papafragou and I am a member of the [Language & Cognition Lab](https://www.langcoglab.com/).
 
-I received my B.A. in Linguistics from Northwestern University, where I worked with [Jennifer Cole](https://sites.northwestern.edu/cole/), [Masaya Yoshida](https://faculty.wcas.northwestern.edu/~myo507/), and [Annette D'Onofrio](https://faculty.wcas.northwestern.edu/~akd2621/). I also worked as a research assistant for the [Language, Education, and Reading Neuroscience Lab](https://learnlab.northwestern.edu/)). I wrote my thesis on the role of prosodically-marked semantic focus in the reanalysis of garden-path sentences.
+I received my B.A. in Linguistics from Northwestern University, where I worked with [Jennifer Cole](https://sites.northwestern.edu/cole/), [Masaya Yoshida](https://faculty.wcas.northwestern.edu/~myo507/), and [Annette D'Onofrio](https://faculty.wcas.northwestern.edu/~akd2621/). I also worked as a research assistant for the [Language, Education, and Reading Neuroscience Lab](https://learnlab.northwestern.edu/)). I wrote my [thesis](https://escholarship.org/uc/item/5d84n2x7) on the role of prosodically-marked semantic focus in the reanalysis of garden-path sentences.
 
-Beyond linguistics research, I have interests in data visualization, science communication, and the R programming language. I develop [R packages](https://github.com/yjunechoe) and [blog](https://yjunechoe.github.io/blog.html) about these topics in my spare time as a hobby. I'm especially passionate about improving explanatory data viz in academic research and strongly believe that _style_ is just as important as _content_. I am also work as a data science tutor for researchers at Penn.
+Beyond linguistics research, I have interests in data visualization, science communication, and the R programming language. I develop and contribute to [R packages](https://github.com/yjunechoe) and [blog](https://yjunechoe.github.io/blog.html) about these topics as a hobby. I'm especially passionate about improving explanatory data viz in academic research and strongly believe that _style_ is just as important as _content_. I also work as a data science tutor for researchers at Penn.
 
 </div>
 
