--- a/research.Rmd
+++ b/research.Rmd
@@ -28,7 +28,7 @@ Sean McWeeny, June Choe, & Elizabeth S. Norton. (2021). SnowGlobe: An Iterative 
 
 ## Conference Talks
 
-**June Choe**, and Anna Papafragou. *Lexical alternatives and the acquisition of subordinate nouns*. Talk at the 47th Boston University Conference on Language Development (BUCLD), 3-6 November, 2022. Boston University, Boston, MA.
+**June Choe**, and Anna Papafragou. *Lexical alternatives and the acquisition of subordinate nouns*. Talk at the 47th Boston University Conference on Language Development (BUCLD), 3-6 November, 2022. Boston University, Boston, MA. [Slides](static/slides/BUCLD_2022_Choe_Papafragou.pdf)
 
 **June Choe**, Yiran Chen, May Pik Yu Chan, Aini Li, Xin Gao and Nicole Holliday. (2022). *Language-specific Effects on Automatic Speech Recognition Errors in American English*. Talk at the 28th International Conference on Computational Linguistics (CoLing), 12-17 October, 2022. Gyeongju, South Korea. [Slides](static/slides/COLING_2022_Choe_et_al.pdf)
 
