--- a/index.Rmd
+++ b/index.Rmd
@@ -114,7 +114,7 @@ Beyond linguistics research, I have interests in data visualization, science com
 
 <div style='text-align: center; font-family: Fira Mono;'><span class="sc" style="font-size:1.2em">contact me: </span> yj<span>choe</span>\@sas.upenn.edu</div>
 
-
+<a rel="me" href="https://fosstodon.org/@yjunechoe"></a>
 
 <!-- 
 Projects:
