--- a/index.Rmd
+++ b/index.Rmd
@@ -91,7 +91,7 @@ d-title p {
     <strong style="font-family:Roboto Slab; font-size:1.2em">
       <i class="fa fa-code" aria-hidden="true" style="padding-right:5px"></i> Programming: 
     </strong>
-    R <span style="font-size:0.8em">(fluent)</span> | HTML/CSS/JS <span style="font-size:0.8em">(proficient)</span> | Python <span style="font-size:0.8em">(coursework)</span>
+    R <span style="font-size:0.8em">(fluent)</span> | HTML/CSS, Javascript, Julia <span style="font-size:0.8em">(proficient)</span>
   </p>
 </div>
 
